2008-10-12    Michael Schwendt <mschwendt@users.sf.net>

	* Initial import.